yo light thing with js

--- a/plik.html
+++ b/plik.html
@@ -22,10 +22,11 @@
     
     <div>
     <nav id="side-nav">
+        
     <ul id="side-nav-list">
-        <li class="side-nav-item">yo </li>
-        <li class="side-nav-item">L </li>
-        <li class="side-nav-item">ds </li>
+        <li class="side-nav-item"> yo</li>
+        <li class="side-nav-item"> L</li>
+        <li class="side-nav-item"> ds</li>
         <li class="side-nav-item"> dsds</li>
 
     </ul>
@@ -56,6 +57,13 @@ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi amet inventore e
 
 </footer>
 
+<button id="theme-swap">
+🌚
+
+</button>
+
+
+<script src="yo.js"></script>
 
 </body>
 </html>
