--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
     <title>Document</title>
+
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="contact.css">
+
 </head>
+
 <body>
+
     <form id="form" method="get" action="">
-        <label for="name">Name </label>
-    <input type="text" name="" id="name">    
-    <input type="submit" value="submit">
-    <label for="email">Podaj email </label>
-    <input type="email" value="">
-    <input type="submit" value="submit">
-    <label for="agree"> I agree with selling my kidney</label>
-    <input type="checkbox" name="agree" id="agree">
+
+        <label for="email">Email</label>
+        <input class="input" type="email" name="email" id="email">
+
+        <label for="name">Name</label>
+        <input class="input" type="text" name="name" id="name">
+
+        <label for="body">Body</label>
+        <textarea class="input" name="body" id="body" cols="30" rows="10"></textarea>
+
+        <label for="agree">I agree to the privacy policy</label>
+        <input class="input" type="checkbox" name="agree" id="agree">
+
+        <input class="input" type="submit" value="Send">
     </form>
-        <script src="contact.js"></script>
+
+    <script src="contact.js"></script>
+
 </body>
+
 </html>
