--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <label for="body">Body</label>
         <textarea class="input" name="body" id="body" cols="30" rows="10"></textarea>
 
-        <label for="agree">I agree to the privacy policy</label>
+        <label for="agree">I agree to sell my soul</label>
         <input class="input" type="checkbox" name="agree" id="agree">
 
         <input class="input" type="submit" value="Send">
