--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <img src="" alt="">
             </li>
             <li class="nav-item">
-                <a href="contact.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                Contact
+               <a href="contact.html">Contact</a> 
             </li>
             <li class="nav-item">
                 Comments
