--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    <ul id="errors"></ul>
     <form id="form" method="get" action="">
 
         <label for="email">Email</label>
