--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <footer id="footer" class="panel">
         <div class="copyright"> My copyright &copy; 2022</div>
         <div class="about">Look at this amazing website</div>
-        <div class="contact">fssssw@df.com</div>
+        <div class="contact">IamANerd@PL.com</div>
     </footer>
 
     <button id="theme-swap">🌞</button>
